--- a/styles.css
+++ b/styles.css
@@ -60,7 +60,7 @@
   padding: 20px;
   text-align: center;
   font-size: 16px;
-  font-family: 'Century Gothic';
+  font-family: minion-pro, serif;
   font-style: italic; }
   .npc-section-description p {
     font-family: 'Century Gothic'; }
